# rat

./: Cargo.toml  README.md  test.txt  test_file.txt
src/: main.rs  options.rs
