[package]
name = "rat"
license = "GPL-3.0-only"
version = "0.1.0"
edition = "2021"
description = "A basic cat implementation written in rust"
# author = "Lukas Renner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
